# haskell-stats-problem

./: .gitignore  .travis.yml  Average.hs  Column.hs  Count.hs  DistinctCount.hs  Header.hs  Main.hs  NumStats.hs  README.md  Row.hs  TextStats.hs  haskell-stats-problem.cabal
test-suite/: Spec.hs
