name:                haskell-stats-problem
version:             0.1.0.0
author:              Jack Firth
maintainer:          jackhfirth@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-stats-problem
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 4.8
                     , process >= 1.2 && < 1.3
                     , split >= 0.2 && < 0.3
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite hspec
    build-depends:    base >= 4.7 && < 4.8
                    , hspec >= 2.1 && < 2.2
                    , QuickCheck >= 2.6 && < 2.7
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0
